--- a/doqmeat/!f/v4/sunset.css
+++ b/doqmeat/!f/v4/sunset.css
@@ -1,202 +1,212 @@
 :root {
-	--blue: hsla(212, 31%, 56%, 0.9);
-	--purple: hsla(245, 28%, 45%, 0.9);
-	--white: hsla(60, 100%, 100%, 0.9);
-	--yellow: #fff9ce;
-	--peach: hsla(27, 100%, 85%, 0.9);
-	--pink: hsla(352, 34%, 65%, 0.9);
-	--blue2: rgb(83, 98, 141, 0.9);
-	--pink2: hsla(328, 20%, 56%, 0.9);
+  --blue: hsla(212, 31%, 56%, 0.9);
+  --purple: hsla(245, 28%, 45%, 0.9);
+  --white: hsla(60, 100%, 100%, 0.9);
+  --yellow: #fff9ce;
+  --peach: hsla(27, 100%, 85%, 0.9);
+  --pink: hsla(352, 34%, 65%, 0.9);
+  --blue2: rgb(83, 98, 141, 0.9);
+  --pink2: hsla(328, 20%, 56%, 0.9);
 }
 
 ::selection {
-	background: var(--pink2);
-	color: white;
+  background: var(--pink2);
+  color: white;
 }
 
 html {
-	scrollbar-color: #c58991 #5b6b9c;
+  scrollbar-color: #c58991 #5b6b9c;
 }
 
 .box {
-	background-color: var(--blue2);
-	border: 2px dashed var(--pink);
-	color: white;
+  background-color: var(--blue2);
+  border: 2px dashed var(--pink);
+  color: white;
 }
 
 body {
-	background-image: url(sunset/bg1.png), url(/!g/bg/space.gif);
-	background-repeat: no-repeat, repeat;
-	background-size: cover, auto;
-	background-position: bottom;
-	background-attachment: fixed;
-	background-blend-mode: lighten;
+  background-image: url(sunset/bg1.png), url(/!g/bg/space.gif);
+  background-repeat: no-repeat, repeat;
+  background-size: cover, auto;
+  background-position: bottom;
+  background-attachment: fixed;
+  background-blend-mode: lighten;
 }
 
 a {
-	font-weight: bold;
-	color: #e4b0a5;
-	transition-duration: 0.3s;
+  font-weight: bold;
+  color: #e4b0a5;
+  transition-duration: 0.3s;
 }
 
 a:hover {
-	letter-spacing: 1px;
-	color: var(--yellow);
-	text-decoration: underline;
+  letter-spacing: 1px;
+  color: var(--yellow);
+  text-decoration: underline;
 }
 
 b {
-	color: var(--yellow);
+  color: var(--yellow);
 }
 
 h2,
 h3,
 h4 {
-	color: white;
-	font-family: morningtea, var(--fonts);
-	text-shadow: 1px 1px 5px var(--pink);
+  color: white;
+  font-family: morningtea, var(--fonts);
+  text-shadow: 1px 1px 5px var(--pink);
 }
 
 select {
-	background: var(--blue2);
-	color: white;
-	border-radius: 5px;
+  background: var(--blue2);
+  color: white;
+  border-radius: 5px;
 }
 
 #header {
-	font-family: morningtea, var(--fonts);
-	letter-spacing: 3px;
-	color: var(--purple);
-	text-shadow: var(--white) 2px 0px 0px, var(--white) 1.75517px 0.958851px 0px, var(--white) 1.0806px 1.68294px 0px, var(--white) 0.141474px 1.99499px 0px, var(--white) -0.832294px 1.81859px 0px, var(--white) -1.60229px 1.19694px 0px, var(--white) -1.97999px 0.28224px 0px, var(--white) -1.87291px -0.701566px 0px, var(--white) -1.30729px -1.51361px 0px, var(--white) -0.421592px -1.95506px 0px, var(--white) 0.567324px -1.91785px 0px, var(--white) 1.41734px -1.41108px 0px, var(--white) 1.92034px -0.558831px 0px;
+  font-family: morningtea, var(--fonts);
+  letter-spacing: 3px;
+  color: var(--purple);
+  text-shadow: var(--white) 2px 0px 0px, var(--white) 1.75517px 0.958851px 0px,
+    var(--white) 1.0806px 1.68294px 0px, var(--white) 0.141474px 1.99499px 0px,
+    var(--white) -0.832294px 1.81859px 0px,
+    var(--white) -1.60229px 1.19694px 0px, var(--white) -1.97999px 0.28224px 0px,
+    var(--white) -1.87291px -0.701566px 0px,
+    var(--white) -1.30729px -1.51361px 0px,
+    var(--white) -0.421592px -1.95506px 0px,
+    var(--white) 0.567324px -1.91785px 0px,
+    var(--white) 1.41734px -1.41108px 0px,
+    var(--white) 1.92034px -0.558831px 0px;
 }
 
 hr {
-	border-style: dashed;
-	border-color: var(--yellow);
+  border-style: dashed;
+  border-color: var(--yellow);
 }
 
 /* comm box */
 
 #comm button {
-	background: var(--pink);
-	color: white;
-	border-radius: 4px;
-	border: 1px solid var(--blue);
+  background: var(--pink);
+  color: white;
+  border-radius: 4px;
+  border: 1px solid var(--blue);
 }
 
 #comm button:focus {
-	background: white;
-	color: var(--pink);
-	outline-width: thin;
-	outline-color: var(--blue);
-	outline-style: solid;
+  background: white;
+  color: var(--pink);
+  outline-width: thin;
+  outline-color: var(--blue);
+  outline-style: solid;
 }
 
 /*currently*/
 
 #current .hl {
-	background: var(--yellow);
-	color: var(--blue);
+  background: var(--yellow);
+  color: var(--blue);
 }
 
 #current .date {
-	color: var(--yellow);
-	border-top: 3px dotted var(--pink);
+  color: var(--yellow);
+  border-top: 3px dotted var(--pink);
 }
 
 /*chatbox*/
 
 #chat {
-	background: rgb(165, 175, 202, 0.8);
+  background: rgb(165, 175, 202, 0.8);
 }
 
 /*images*/
 
 .rss {
-	content: url(sunset/rss.png);
+  content: url(sunset/rss.png);
 }
 
 h3.personal::before {
-	content: url(sunset/personal.png);
+  content: url(sunset/personal.png);
 }
 
 h3.media::before {
-	content: url(sunset/media.png);
+  content: url(sunset/media.png);
 }
 
 h3.misc::before {
-	content: url(sunset/misc.png);
+  content: url(sunset/misc.png);
 }
 
 h3.site::before {
-	content: url(sunset/sitely.png);
+  content: url(sunset/sitely.png);
 }
 
 h3.offsite::before {
-	content: url(sunset/offsite.png);
+  content: url(sunset/offsite.png);
 }
 
 .mc-cat {
-	content: url(sunset/cat.png);
+  content: url(sunset/cat.png);
 }
 
 /*rss updates*/
 
 #updates h4 {
-	text-shadow: none;
+  text-shadow: none;
 }
 
 #updates h4:nth-of-type(1) a {
-	color: var(--peach);
-	text-shadow: 1px 1px 3px var(--blue);
+  color: var(--peach);
+  text-shadow: 1px 1px 3px var(--blue);
 }
 
 p.feed-item-desc {
-	margin: 15px 5px 20px 20px;
+  margin: 15px 5px 20px 20px;
 }
 
 p.feed-item-desc:nth-of-type(1) {
-	font-weight: bold;
+  font-weight: bold;
 }
 
 #updates h4 a {
-	text-decoration: none;
+  text-decoration: none;
 }
 
 /*status cafe*/
 
 #statuscafe {
-	border-radius: 0 0 10px 10px;
+  border-radius: 0 0 10px 10px;
+  border: 1px dashed white;
 }
 
 #statuscafe a {
-	color: var(--yellow);
-	text-decoration: none;
+  color: var(--yellow);
+  text-decoration: none;
 }
 
 #statuscafe-username {
-	font-size: 14px;
-	background:var(--pink2);
-	font-family: morningtea, var(--fonts);
-	border-bottom: 0px;
+  font-size: 14px;
+  background: var(--pink2);
+  font-family: morningtea, var(--fonts);
+  border-bottom: 0px;
 }
 
 #statuscafe-content {
-	background:var(--blue);
-	color: var(--yellow);
+  background: var(--blue);
+  color: white;
 }
 
 /*tooltip*/
 
 #s-m-t-tooltip {
-	color: var(--blue2);
-	border: 1px solid var(--pink);
-	background: white;
+  color: var(--blue2);
+  border: 1px solid var(--pink);
+  background: white;
 }
 
 /*imood*/
 
 .imood {
-	background: white;
-	border-radius: 4px;
+  background: white;
+  border-radius: 4px;
 }
